Fix header spacing
You can't have negative padding

--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -15,7 +15,7 @@
 
   &--admin {
     padding-top: 40px;
-    padding-bottom: -$app-header-border-width;
+    padding-bottom: $app-header-border-width;
     border-bottom: $app-header-border-width solid $app-header-bar-colour;
 
     .govuk-header__container {
